--- a/site/layouts/partials/navbar.html
+++ b/site/layouts/partials/navbar.html
@@ -5,14 +5,14 @@
     <a class="navbar-brand mr-2" href="/"><img src="/images/text_racoon_logo.svg" width="120" height="43" alt="checkly logo"/></a>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" id="dropdown-li">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" href="#">Product</a>
-          <div class="dropdown-menu big-drop-shadow product-dropdown">
+          <div class="dropdown-menu big-drop-shadow product-dropdown" id="dropdown-menu">
             <div class="dropmenu-triangle"></div>
             <a class="dropdown-item" href="/product/api-monitoring/">
               <div class="d-flex">
                 <div class="menu-icon">
-                  <img src="images/icons/api.svg" alt="Api monitoring" width="32" height="32" />
+                  <img src="/images/icons/api.svg" alt="Api monitoring" width="32" height="32" />
                 </div>
                 <div>
                   <div class="menu-title">API Monitoring</div>
@@ -23,7 +23,7 @@
             <a class="dropdown-item" href="/product/synthetic-monitoring/">
               <div class="d-flex">
                 <div class="menu-icon">
-                  <img src="images/icons/chrome.svg" alt="Synthetic Monitoring" width="32" height="32" />
+                  <img src="/images/icons/chrome.svg" alt="Synthetic Monitoring" width="32" height="32" />
                 </div>
                 <div>
                   <div class="menu-title">Synthetic Monitoring</div>
@@ -34,7 +34,7 @@
             <a class="dropdown-item" href="/product/alerting/">
               <div class="d-flex">
                 <div class="menu-icon">
-                  <img src="images/icons/alert.svg" alt="Alerting" width="32" height="32" />
+                  <img src="/images/icons/alert.svg" alt="Alerting" width="32" height="32" />
                 </div>
                 <div>
                   <div class="menu-title">Alerting</div>
