--- a/site/layouts/partials/docs-menu.html
+++ b/site/layouts/partials/docs-menu.html
@@ -1,5 +1,5 @@
 <aside class="docs-menu">
-  <nav id="sideMenu" class="left-transform">
+  <nav id="sideMenu" class="left-transform right-transform">
     <a
       class="api-reference-link"
       href="/docs/api"
