fix some more feedback.

--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -364,7 +364,7 @@
         transform: translateX(-260px);
       }
       .docs-menu-mobile-right-space {
-        display: block;
+        display: none;
         position: fixed;
         right: 0;
         top: 0;
