--- a/site/layouts/docs/baseof.html
+++ b/site/layouts/docs/baseof.html
@@ -9,6 +9,7 @@
   {{ partial "navbar" . }}
   {{ block "main" . }}
   {{ end }}
+  {{ partial "footer" . }}
   {{ partial "scripts" . }}
   <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
   <script>
