--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -24,7 +24,7 @@
     margin-left: auto;
 
     &-content {
-      max-height: 600px;
+      max-height: 78vh;
       overflow-y: auto;
       margin-left: -6px !important;
       padding-right: 20px !important;
