separate docs js

--- a/site/layouts/docs/baseof.html
+++ b/site/layouts/docs/baseof.html
@@ -3,6 +3,7 @@
 <head>
   {{ partial "head" . }}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css"/>
+  <script src="/js/docs.js"></script>
 </head>
 
 <body>
