--- a/site/layouts/integrations/list.html
+++ b/site/layouts/integrations/list.html
@@ -8,7 +8,38 @@
             {{ .Params.heroDescription}}
           </p>
         </div>
+        <div class="integrations__highlights">
+          <div class="integrations__highlights__tabs d-flex">
+            {{ range $index, $element:=.Params.highlights}}
+            <div class="integration-tab" id="integration-tab-{{ $index }}">
+              <img src={{.tabIcon}} alt={{.label}} width="68" height="16" />
+            </div>
+            {{ end }}
+          </div>
+          <div class="integrations__highlights__contents">
+            {{ range $index, $element:=.Params.highlights}}
+            <div class="integration-tab-content" id="integration-tab-{{$index}}-content">
+              <div class="image-wrap">
+                <img src={{.image}} alt={{.title}} width="424" height="280" />
+              </div>
+              <div class="text-wrap">
+                <div class="label">
+                  {{ .label }}
+                </div>
+                <h3 class="display-4">
+                  {{ .title }}
+                </h3>
+                <p>{{ .description | markdownify }}</p>
+                <a class="cta-link" href="{{.ctaLink}}">
+                  See how to integrate
+                </a>
+              </div>
+            </div>
+            {{ end }}
+          </div>
+        </div>
         <div class="integrations__subnav">
+          <h2 class="display-4 text-center">All Integartions</h2>
           <div class="d-flex">
             <a href="#alert">Alerting</a>
             <a href="#triggers">Triggers</a>
