added guide single post template

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,6 +12,7 @@
 @import 'footer';
 @import 'plans';
 @import 'docs';
+@import 'guides';
 @import 'toc-sidebar';
 @import 'article';
 @import 'markdown';
