--- a/src/scss/_guides.scss
+++ b/src/scss/_guides.scss
@@ -43,6 +43,20 @@
 	      border: 1px solid $gray-light;
 	    }
 	  }
+	  figure {
+	    margin: 1rem 0;
+
+	    figcaption {
+	      h4 {
+	        font-size: 12px;
+	        line-height: 20px;
+	        font-weight: normal;
+	        margin-top: 10px;
+	        text-align: center;
+	        text-transform: uppercase;
+	      }
+	    }
+	  }
 	  .markdown-tabs {
 	  	.markdown-tabs-content {
 	  		padding: 0;
