--- a/src/scss/_guides.scss
+++ b/src/scss/_guides.scss
@@ -54,6 +54,7 @@
 	        margin-top: 10px;
 	        text-align: center;
 	        text-transform: uppercase;
+	        color: $gray-darkish;
 	      }
 	    }
 	  }
