change path & footer

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -45,6 +45,12 @@
             <li><a href="https://registry.terraform.io/providers/checkly/checkly/latest/docs" target="_blank" rel="noopener">Terraform Provider</a></li>
           </ul>
         </div>
+        <div class="mb-3 mb-md-0">
+          <h6 id="menu_5_header">Learning</h6>
+          <ul id="menu_5" class="desktop-show">
+            <li><a href="/guides/end-to-end-monitoring">End-to-End Monitoring</a></li>
+          </ul>
+        </div>
       </div>
       <div class="col-lg-3">
         <div class="mb-3 mb-md-0">
