update highlight images

--- a/site/layouts/integrations/list.html
+++ b/site/layouts/integrations/list.html
@@ -12,7 +12,7 @@
           <div class="integrations__highlights__tabs d-flex">
             {{ range $index, $element:=.Params.highlights}}
             <div class="integration-tab" id="integration-tab-{{ $index }}">
-              <img src={{.tabIcon}} alt={{.label}} width="68" height="16" />
+              <img src={{.tabIcon}} alt={{.label}} width="68" />
             </div>
             {{ end }}
           </div>
