--- a/src/scss/_integrations.scss
+++ b/src/scss/_integrations.scss
@@ -28,6 +28,7 @@
 
 			.integration-tab {
 			  width: 160px;
+			  height: auto;
 			  text-align: center;
 			  padding-bottom: 10px;
 			  border-bottom: 2px solid $blue;
