docs: link MaC guide in footer

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -49,6 +49,7 @@
           <h6 id="menu_4_header">Learning</h6>
           <ul id="menu_4" class="desktop-show">
             <li><a href="/guides/end-to-end-monitoring">End-to-End Monitoring</a></li>
+            <li><a href="/guides/monitoring-as-code">Monitoring-as-Code</a></li>
           </ul>
         </div>
       </div>
