--- a/site/layouts/docs/list.html
+++ b/site/layouts/docs/list.html
@@ -12,6 +12,18 @@
           <input class="form-control py-2" id="search" type="search" placeholder="Press / to search" />
         </form>
       </div>
+      <div class="breadcrumb">
+        {{ $url := replace .Permalink ( printf "%s" .Site.BaseURL) "/" }}
+        {{ range $index, $element := split $url "/" }}
+          {{ if ne $element "" }}
+            {{ if eq $element "docs" }}
+              <a href="{{ . | absURL }}">Checkly docs</a>
+            {{ else }}
+              <a href="{{ . | absURL }}"><span>/</span> {{ humanize . }}</a>
+            {{ end }}
+          {{ end }}
+        {{ end }}
+      </div>
       <h1>{{ .Title }}</h1>
       <div class="docs-toc-mobile mb-5 pt-3">
         <div class="docs-toc-header mb-3 pt-3">On this page</div>
