--- a/site/layouts/docs/list.html
+++ b/site/layouts/docs/list.html
@@ -12,18 +12,23 @@
           <input class="form-control py-2" id="search" type="search" placeholder="Press / to search" />
         </form>
       </div>
+      
+      {{ $url := replace .Permalink ( printf "%s" .Site.BaseURL) "/" }}
+      {{ $homeURL := $url | absURL }}
+      {{ if ne $homeURL "//docs/" }}
       <div class="breadcrumb">
-        {{ $url := replace .Permalink ( printf "%s" .Site.BaseURL) "/" }}
-        {{ range $index, $element := split $url "/" }}
-          {{ if ne $element "" }}
-            {{ if eq $element "docs" }}
-              <a href="{{ . | absURL }}">Checkly docs</a>
-            {{ else }}
-              <a href="{{ . | absURL }}"><span>/</span> {{ humanize . }}</a>
-            {{ end }}
+      {{ range $index, $element := split $url "/" }}
+        {{ if ne $element "" }}
+          {{ if eq $element "docs" }}
+            <a href="/docs">Checkly docs</a>
+          {{ else }}
+            <div><span>/</span> {{ humanize . }}</div>
           {{ end }}
         {{ end }}
+      {{ end }}
       </div>
+      {{ end }}
+      
       <h1>{{ .Title }}</h1>
       <div class="docs-toc-mobile mb-5 pt-3">
         <div class="docs-toc-header mb-3 pt-3">On this page</div>
