--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -267,6 +267,7 @@
       margin: 30px 0 20px;
       padding: 0;
       background: none;
+      font-size: 14px;
       
       & a {
         color: $gray;
