--- a/site/layouts/docs/single.html
+++ b/site/layouts/docs/single.html
@@ -18,15 +18,14 @@
           {{ range $index, $element := split $url "/" }}
             {{ if ne $element "" }}
               {{ if eq $element "docs" }}
-                <a href="/docs">Checkly docs</a>
-                <span>/</span>
+                <a href="/docs/">Checkly docs</a>
               {{ else }}
+                <span>/</span>
                 {{ if eq $index 3 }}
-                <a href="/docs/{{ . }}">{{ humanize . }}</a>
+                <a href="/docs/{{ . }}/">{{ humanize . }}</a>
                 {{ else }}
                 {{ humanize . }}
                 {{ end }}
-                <span>/</span>
               {{ end }}
             {{ end }}
           {{ end }}
