pricing text fix

--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -84,11 +84,11 @@
           <a class="btn btn-success pricing__card-right__btn" href="https://app.checklyhq.com/signup" rel="noopener">Start for free</a>
         </div>
         <div class="pricing__plans--label">
-          All plans starts with 14 days free trial with full feature access
+          All plans start with 14 days free trial and full feature access.
         </div>
         <div class="pricing__plans--toggle">
           <span><img class="pricing__plans--toggle-arrow" src="/images/icons/svg/pink-drop.svg" width="14" height="7.75" /></span>
-          <span class="ml-1 mr-1">Get sweet discounts on rates for commitment</span>
+          <span class="ml-1 mr-1">Get discounts for your commitment.</span>
           <span><img class="pricing__plans--toggle-arrow" src="/images/icons/svg/pink-drop.svg" width="14" height="7.75" /></span>
         </div>
         <div id="pricing__plans--toggle-card" class="pricing__card--light pricing__card--hidden">
