--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -142,7 +142,7 @@
                 </li>
                 <li>
                   <i class="ion-ios-checkmark text-primary mr-2"></i>
-                  Pay upfront, get a discount
+                  Unlimited users, all features
                 </li>
               </ul>
             </div>
