--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -166,7 +166,7 @@
         <div class="pricing__spreadsheet">
           <a class="d-flex" href="https://docs.google.com/spreadsheets/d/1ahnSqIDp6VXNSGWqSOtm2lSSo5ylIaeuZn57qNPM0H0/copy" target="_blank" rel="noopener">
             <img src="/images/google_Sheets_logo@2x.png" alt="Google Sheets Logo" width="14" height="18" />
-            Use our pricing spreadsheet to build your own plan
+            Use our pricing spreadsheet to build your plan
           </a>
         </div>
       </div>
