docs: tiny tweaks [ch-0000]

--- a/site/layouts/integrations/list.html
+++ b/site/layouts/integrations/list.html
@@ -31,7 +31,7 @@
                 </h3>
                 <p>{{ .description | markdownify }}</p>
                 <a class="cta-link" href="{{.ctaLink}}">
-                  See how to integrate
+                  Learn more
                 </a>
               </div>
             </div>
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div class="integrations__subnav">
-          <h2 class="display-4 text-center">All Integartions</h2>
+          <h2 class="display-4 text-center">All Integrations</h2>
           <div class="d-flex">
             <a href="#alert">Alerting</a>
             <a href="#triggers">Triggers</a>
