--- a/site/layouts/pricing/list.html
+++ b/site/layouts/pricing/list.html
@@ -88,7 +88,7 @@
         </div>
         <div class="pricing__plans--toggle">
           <span><img class="pricing__plans--toggle-arrow" src="/images/icons/svg/pink-drop.svg" width="14" height="7.75" /></span>
-          <span class="ml-1 mr-1">Get discounts for your commitment.</span>
+          <span class="ml-1 mr-1">Get a discount for your commitment.</span>
           <span><img class="pricing__plans--toggle-arrow" src="/images/icons/svg/pink-drop.svg" width="14" height="7.75" /></span>
         </div>
         <div id="pricing__plans--toggle-card" class="pricing__card--light pricing__card--hidden">
