fix: black outline around code lines [ch-00]

--- a/src/scss/_docs.scss
+++ b/src/scss/_docs.scss
@@ -172,6 +172,10 @@
       .search {
         margin-bottom: 30px;
       }
+
+      code {
+        box-shadow: none;
+      }
     }
 
     .form-inline {
