feat: add algolia search for learn section

--- a/site/layouts/learn/baseof.html
+++ b/site/layouts/learn/baseof.html
@@ -15,7 +15,7 @@
   <script>
     docsearch({
       apiKey: 'b2b616fdea14b860ff00c72fa72bf267',
-      indexName: 'checkly_docs',
+      indexName: 'checkly_learn',
       appId: 'LCMJSZN73Z',
       inputSelector: '#search',
       debug: false
