chore: add P&P to footer and remove hd from OSS

--- a/site/layouts/open-source/list.html
+++ b/site/layouts/open-source/list.html
@@ -43,28 +43,7 @@
 		            </a>
       				</div>
       			</div>
-      			<div class="card">
-              <div class="card-image">
-      				  <img src="/opensource/headlessdev_logo.svg" alt="headlessdev logo" width="69" height="92" />
-              </div>
-      				<h5>
-                theheadless.dev
-                <span>
-                  <img src="/images/github-star.svg" alt="github start" width="16" height="15" />
-                </span>
-                <span id="theheadless-dev"></span>
-              </h5>
-      				<p>Community driven knowledge base for learning headless browser automation</p>
-      				<div class="cta-wraps">
-      					<a class="cta-link" href="https://theheadless.dev" target="_blank" rel="noopener">
-		              <img src="/images/arrow-download.svg" alt="arrow download" width="10" height="14" />
-		              Visit theheadless.dev
-		            </a>
-		            <a class="cta-link" href="https://github.com/checkly/theheadless.dev" target="_blank" rel="noopener">
-		              See the code
-		            </a>
-      				</div>
-      			</div>
+
       			<div class="card">
               <div class="card-image">
       				  <img src="/opensource/terraform_logo.svg" alt="terraform logo" width="101" height="92" />
@@ -76,7 +55,7 @@
                 </span>
                 <span id="terraform-provider"></span>
               </h5>
-      				<p>The Terraform provider enables users to manage Checkly resources</p>
+      				<p>The Terraform provider enables users to manage your Checkly resources</p>
       				<div class="cta-wraps">
       					<a class="cta-link" href="https://registry.terraform.io/providers/checkly/checkly/latest/docs" target="_blank" rel="noopener">
 		              <img src="/images/arrow-visit.svg" alt="arrow visit" width="13" height="13" />
