--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -40,7 +40,6 @@
         <div class="mb-3 mb-md-0">
           <h6 id="menu_3_header">Open Source</h6>
           <ul id="menu_3" class="desktop-show">
-            <li><a href="https://theheadless.dev" target="_blank" rel="noopener">theheadless.dev</a></li>
             <li><a href="https://chrome.google.com/webstore/detail/headless-recorder/djeegiggegleadkkbgopoonhjimgehda?hl=en" target="_blank" rel="noopener">Headless Recorder</a></li>
             <li><a href="https://registry.terraform.io/providers/checkly/checkly/latest/docs" target="_blank" rel="noopener">Terraform Provider</a></li>
           </ul>
@@ -48,6 +47,7 @@
         <div class="mb-3 mb-md-0">
           <h6 id="menu_4_header">Learn</h6>
           <ul id="menu_4" class="desktop-show">
+            <li><a href="/learn/headless">Puppeteer & Playwright</a></li>
             <li><a href="/guides/end-to-end-monitoring">End-to-End Monitoring</a></li>
             <li><a href="/guides/monitoring-as-code">Monitoring-as-Code</a></li>
           </ul>
