chore: remove all hd references and update p&p examples (#159)
* chore: remove all hd references and update p&p examples

* chore: update pdf generation website example

--- a/site/layouts/open-source/list.html
+++ b/site/layouts/open-source/list.html
@@ -84,8 +84,8 @@
       	<div class="container">
       		<h2 class="section-header">
       		  Recent posts from
-            <a href="https://theheadless.dev" target="_blank" rel="noopener">
-		          <img src="/opensource/theheadless-dev.svg" alt="theheadless.dev logo" width="271" height="23" />
+            <a href="/learn/headless">
+		          Headless Automation Guides
             </a>
       		</h2>
       		<p class="lead">Puppeteer and Playwright tips, tricks and in-depth guides from the trenches</p>
