--- a/site/layouts/partials/navbar.html
+++ b/site/layouts/partials/navbar.html
@@ -84,7 +84,7 @@
                 </div>
                 <div>
                   <div class="menu-title">Blog</div>
-                  <div class="menu-text">Product updates and long content on engineering, DevOps, and building a SaaS.</div>
+                  <div class="menu-text">Product updates and long content on engineering, DevOps, and SaaS.</div>
                 </div>
               </div>
             </a>
