--- a/site/layouts/learn/list.html
+++ b/site/layouts/learn/list.html
@@ -4,7 +4,7 @@
   <div class="learn-page">
     <article class="markdown">
       <div class="welcome">
-        <h5>Welcome to the headless automation guide!</h5>
+        <h5>Welcome to the Headless Automation Guides!</h5>
         <p>We gave theheadless.dev a new home and will publish fresh content around Puppeteer & Playwright in this guide.</p>
       </div>
       <div class="d-flex search">
