Footer Dropdown Menu Issue (#167)
* update footer dropdown javascript

* fix issue

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -3,8 +3,8 @@
     <div class="row footer-top">
       <div class="col-lg-3">
         <div class="mb-3 mb-md-0">
-          <h6 id="menu_1_header">Product</h6>
-          <ul id="menu_1" class="desktop-show">
+          <h6 class="menu_header" id="menu_1">Product</h6>
+          <ul id="menu_1_drop" class="desktop-show">
             <li>
               <a href="/product/api-monitoring/">API monitoring</a>
             </li>
@@ -23,8 +23,8 @@
       </div>
       <div class="col-lg-3">
         <div class="mb-3 mb-md-0">
-          <h6 id="menu_2_header">Company</h6>
-          <ul id="menu_2" class="desktop-show">
+          <h6 class="menu_header" id="menu_2">Company</h6>
+          <ul id="menu_2_drop" class="desktop-show">
             <li><a href="/about">About</a></li>
             <li><a href="/jobs">Jobs
             </a></li>
@@ -38,15 +38,15 @@
       </div>
       <div class="col-lg-3">
         <div class="mb-3 mb-md-0">
-          <h6 id="menu_3_header">Open Source</h6>
-          <ul id="menu_3" class="desktop-show">
+          <h6 class="menu_header" id="menu_3">Open Source</h6>
+          <ul id="menu_3_drop" class="desktop-show">
             <li><a href="https://chrome.google.com/webstore/detail/headless-recorder/djeegiggegleadkkbgopoonhjimgehda?hl=en" target="_blank" rel="noopener">Headless Recorder</a></li>
             <li><a href="https://registry.terraform.io/providers/checkly/checkly/latest/docs" target="_blank" rel="noopener">Terraform Provider</a></li>
           </ul>
         </div>
         <div class="mb-3 mb-md-0">
-          <h6 id="menu_4_header">Learn</h6>
-          <ul id="menu_4" class="desktop-show">
+          <h6 class="menu_header" id="menu_4">Learn</h6>
+          <ul id="menu_4_drop" class="desktop-show">
             <li><a href="/learn/headless">Puppeteer & Playwright</a></li>
             <li><a href="/guides/end-to-end-monitoring">End-to-End Monitoring</a></li>
             <li><a href="/guides/monitoring-as-code">Monitoring-as-Code</a></li>
@@ -55,16 +55,16 @@
       </div>
       <div class="col-lg-3">
         <div class="mb-3 mb-md-0">
-          <h6 id="menu_5_header">Connect</h6>
-          <ul id="menu_5" class="desktop-show">
+          <h6 class="menu_header" id="menu_5">Connect</h6>
+          <ul id="menu_5_drop" class="desktop-show">
             <li><a class="open-intercom-link" href="mailto:support@checklyhq.com">Support</a></li>
             <li><a href="https://twitter.com/checklyHQ" target="_blank" rel="noopener">Twitter @ChecklyHQ</a></li>
             <li><a href="https://github.com/checkly/product-roadmap/projects/1" target="_blank" rel="noopener">Public Roadmap</a></li>
           </ul>
         </div>
         <div class="mb-3 mb-md-0">
-          <h6 id="menu_6_header">How we compare</h6>
-          <ul id="menu_6" class="desktop-show">
+          <h6 class="menu_header" id="menu_6">How we compare</h6>
+          <ul id="menu_6_drop" class="desktop-show">
             <li><a href="/alternative/to-pingdom/">Alternative to Pingdom</a></li>
             <li><a href="/alternative/to-runscope/">Alternative to Runscope</a></li>
           </ul>
