docs: changelog on footer [ch-000] (#170)

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -14,7 +14,7 @@
             <li><a href="/integrations">Integrations</a></li>
             <li><a href="/docs">Docs</a></li>
             <li><a href="/docs/api">API reference</a></li>
-            <li><a href="https://headwayapp.co/checkly-updates" target="_blank" rel="noopener">Product updates</a></li>
+            <li><a href="https://changelog.checklyhq.com/" target="_blank" rel="noopener">Changelog</a></li>
             <li><a href="/pricing">Pricing</a></li>
             <li><a href="https://status.checklyhq.com/" target="_blank" rel="noopener">Live dashboard</a><span
                 class="green-dot"></span></li>
