feat: adds external status page

--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -16,8 +16,8 @@
             <li><a href="/docs/api">API reference</a></li>
             <li><a href="https://changelog.checklyhq.com/" target="_blank" rel="noopener">Changelog</a></li>
             <li><a href="/pricing">Pricing</a></li>
-            <li><a href="https://status.checklyhq.com/" target="_blank" rel="noopener">Live dashboard</a><span
-                class="green-dot"></span></li>
+            <a class="sp-status" href="//checklyhq-com.statuspal.io">Status</a>
+<!--            <li><a href="https://status.checklyhq.com/" target="_blank" rel="noopener">Live dashboard</a><span class="green-dot"></span></li>-->
           </ul>
         </div>
       </div>
