feat: add new "why checkly" page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,6 +28,7 @@
 @import 'mailchimp-signup-row';
 @import 'more-like-this';
 @import 'pricing-v2';
+@import 'why-checkly';
 @import 'sections/hero';
 @import 'sections/api-monitoring';
 @import 'sections/alerting';
