--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -33,6 +33,7 @@
             <li><a href="/security">Security</a></li>
             <li><a href="/terms">Terms of use</a></li>
             <li><a href="/privacy">Privacy policy</a></li>
+            <li><a href="/why-checkly">Why Checkly</a></li>
           </ul>
         </div>
       </div>
